cmake_minimum_required(VERSION 3.4)
project(AllTheHaxx)

#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
add_definitions("-DCONF_FAMILY_UNIX")
add_definitions("-DCONF_DEBUG")
add_definitions("-DCONF_SPOOFING")
add_definitions("-DFEATURE_LUA")
add_definitions("-DCONF_PROTECT")
add_definitions("-DDO_NOT_COMPILE_THIS_CODE")

include_directories(
        other/sdl/include
        other/freetype/include
        other/curl/include
        other/luajit/include
        other/mysql/include
        other/opus/include
        src/engine/external
        src
)

set(SOURCE_FILES
    src/twping/twping.cpp
    src/osxlaunch/client.h
    src/tools/map_resave.cpp
    src/tools/tileset_borderfix.cpp
    src/tools/cdns.cpp
    src/tools/tileset_borderrem.cpp
    src/tools/fake_server.cpp
    src/tools/config_store.cpp
    src/tools/slc_unpack.cpp
    src/tools/crapnet.cpp
    src/tools/config_common.h
    src/tools/packetgen.cpp
    src/tools/tileset_borderadd.cpp
    src/tools/config_retrieve.cpp
    src/tools/tileset_borderset.cpp
    src/tools/dummy_map.cpp
    src/tools/confusables.cpp
    src/tools/dilate.cpp
    src/tools/map_version.cpp
    src/base/detect.h
    src/base/confusables_data.h
    src/base/tl/base.h
    src/base/tl/algorithm.h
    src/base/tl/allocator.h
    src/base/tl/array.h
    src/base/tl/range.h
    src/base/tl/threading.h
    src/base/tl/sorted_array.h
    src/base/tl/string.h
    src/base/system.c
    src/base/math.h
    src/base/vmath.h
    src/base/color.h
    src/base/confusables.c
    src/base/system.h
    src/engine/message.h
    src/engine/serverbrowser.h
    src/engine/client/keynames.h
    src/engine/client/serverbrowser.h
    src/engine/client/fetcher.cpp
    src/engine/client/updater.cpp
    src/engine/client/backend_sdl.h
    src/engine/client/db_sqlite3.h
    src/engine/client/db_sqlite3.cpp
    src/engine/client/irc.h
    src/engine/client/client.cpp
    src/engine/client/serverbrowser.cpp
    src/engine/client/luabinding.h
    src/engine/client/text.cpp
    src/engine/client/irc.cpp
    src/engine/client/luabinding.cpp
    src/engine/client/luafile.cpp
    src/engine/client/lua.h
    src/engine/client/graphics_threaded.cpp
    src/engine/client/debug.h
    src/engine/client/sound.cpp
    src/engine/client/updater.h
    src/engine/client/friends.cpp
    src/engine/client/graphics_threaded.h
    src/engine/client/curlwrapper.cpp
    src/engine/client/lua.cpp
    src/engine/client/lua_apidef.cpp
    src/engine/client/curlwrapper.h
    src/engine/client/backend_sdl.cpp
    src/engine/client/friends.h
    src/engine/client/input.h
    src/engine/client/client.h
    src/engine/client/sound.h
    src/engine/client/input.cpp
    src/engine/client/luafile.h
    src/engine/client/debug.cpp
    src/engine/client/fetcher.h
    src/engine/masterserver.h
    src/engine/irc.h
    src/engine/editor.h
    src/engine/shared/message.h
    src/engine/shared/linereader.cpp
    src/engine/shared/demo.cpp
    src/engine/shared/compression.h
    src/engine/shared/network_console.cpp
    src/engine/shared/map.cpp
    src/engine/shared/protocol.h
    src/engine/shared/fifo.cpp
    src/engine/shared/datafile.h
    src/engine/shared/network_client.cpp
    src/engine/shared/storage.cpp
    src/engine/shared/network.cpp
    src/engine/shared/memheap.h
    src/engine/shared/websockets.h
    src/engine/shared/packer.h
    src/engine/shared/config.cpp
    src/engine/shared/econ.h
    src/engine/shared/network_conn.cpp
    src/engine/shared/linereader.h
    src/engine/shared/serverbrowser.cpp
    src/engine/shared/websockets.cpp
    src/engine/shared/stream.cpp
    src/engine/shared/huffman.cpp
    src/engine/shared/ringbuffer.cpp
    src/engine/shared/snapshot.h
    src/engine/shared/demo.h
    src/engine/shared/fifo.h
    src/engine/shared/filecollection.h
    src/engine/shared/packer.cpp
    src/engine/shared/network_server.cpp
    src/engine/shared/jobs.cpp
    src/engine/shared/mapchecker.h
    src/engine/shared/config.h
    src/engine/shared/huffman.h
    src/engine/shared/filecollection.cpp
    src/engine/shared/stream.h
    src/engine/shared/console.cpp
    src/engine/shared/engine.cpp
    src/engine/shared/config_variables.h
    src/engine/shared/datafile.cpp
    src/engine/shared/compression.cpp
    src/engine/shared/memheap.cpp
    src/engine/shared/console.h
    src/engine/shared/snapshot.cpp
    src/engine/shared/masterserver.cpp
    src/engine/shared/econ.cpp
    src/engine/shared/kernel.cpp
    src/engine/shared/network.h
    src/engine/shared/ringbuffer.h
    src/engine/shared/network_console_conn.cpp
    src/engine/shared/mapchecker.cpp
    src/engine/shared/jobs.h
    src/engine/shared/storage.h
    src/engine/shared/netban.h
    src/engine/shared/netban.cpp
    src/engine/server/register.cpp
    src/engine/server/sql_connector.h
    src/engine/server/register.h
    src/engine/server/sql_server.cpp
    src/engine/server/sql_server.h
    src/engine/server/sql_connector.cpp
    src/engine/server/sql_string_helpers.cpp
    src/engine/server/server.h
    src/engine/server/server.cpp
    src/engine/server/sql_string_helpers.h
    src/engine/demo.h
    src/engine/external/wavpack/bits.c
    src/engine/external/wavpack/wavpack.h
    src/engine/external/wavpack/float.c
    src/engine/external/wavpack/metadata.c
    src/engine/external/wavpack/wputils.c
    src/engine/external/wavpack/wvfilter.c.no_compile
    src/engine/external/wavpack/words.c
    src/engine/external/wavpack/unpack.c
    src/engine/external/md5/md5.h
    src/engine/external/md5/md5.c
    src/engine/external/luabridge/detail/dump.h
    src/engine/external/luabridge/detail/Userdata.h
    src/engine/external/luabridge/detail/Namespace.h
    src/engine/external/luabridge/detail/Iterator.h
    src/engine/external/luabridge/detail/TypeList.h
    src/engine/external/luabridge/detail/ClassInfo.h
    src/engine/external/luabridge/detail/TypeTraits.h
    src/engine/external/luabridge/detail/LuaRef.h
    src/engine/external/luabridge/detail/Constructor.h
    src/engine/external/luabridge/detail/LuaHelpers.h
    src/engine/external/luabridge/detail/LuaException.h
    src/engine/external/luabridge/detail/Stack.h
    src/engine/external/luabridge/detail/FuncTraits.h
    src/engine/external/luabridge/detail/CFunctions.h
    src/engine/external/luabridge/LuaBridge.h
    src/engine/external/luabridge/RefCountedObject.h
    src/engine/external/luabridge/RefCountedPtr.h
    src/engine/external/zlib/zutil.c
    src/engine/external/zlib/deflate.c
    src/engine/external/zlib/gzread.c
    src/engine/external/zlib/adler32.c
    src/engine/external/zlib/inflate.h
    src/engine/external/zlib/gzwrite.c
    src/engine/external/zlib/inffixed.h
    src/engine/external/zlib/deflate.h
    src/engine/external/zlib/uncompr.c
    src/engine/external/zlib/gzclose.c
    src/engine/external/zlib/crc32.h
    src/engine/external/zlib/trees.c
    src/engine/external/zlib/zlib.h
    src/engine/external/zlib/trees.h
    src/engine/external/zlib/zconf.h
    src/engine/external/zlib/zutil.h
    src/engine/external/zlib/inffast.h
    src/engine/external/zlib/infback.c
    src/engine/external/zlib/crc32.c
    src/engine/external/zlib/gzguts.h
    src/engine/external/zlib/inftrees.h
    src/engine/external/zlib/inffast.c
    src/engine/external/zlib/inflate.c
    src/engine/external/zlib/gzlib.c
    src/engine/external/zlib/compress.c
    src/engine/external/zlib/inftrees.c
    src/engine/external/sqlite3/sqlite3.h
    src/engine/external/sqlite3/sqlite3.c
    src/engine/external/sqlite3/sqlite3ext.h
    src/engine/external/libwebsockets/sha-1.c
    src/engine/external/libwebsockets/extension-deflate-frame.h
    src/engine/external/libwebsockets/lextable.h
    src/engine/external/libwebsockets/handshake.c
    src/engine/external/libwebsockets/parsers.c
    src/engine/external/libwebsockets/server.c
    src/engine/external/libwebsockets/lws-plat-unix.c
    src/engine/external/libwebsockets/huftable.h
    src/engine/external/libwebsockets/extension.c
    src/engine/external/libwebsockets/libwebsockets.h
    src/engine/external/libwebsockets/service.c
    src/engine/external/libwebsockets/server-handshake.c
    src/engine/external/libwebsockets/libwebsockets.c
    src/engine/external/libwebsockets/config.h
    src/engine/external/libwebsockets/extension-deflate-frame.c
    src/engine/external/libwebsockets/pollfd.c
    src/engine/external/libwebsockets/extension-deflate-stream.c
    src/engine/external/libwebsockets/lextable-strings.h
    src/engine/external/libwebsockets/base64-decode.c
    src/engine/external/libwebsockets/output.c
    src/engine/external/libwebsockets/alloc.c
    src/engine/external/libwebsockets/context.c
    src/engine/external/libwebsockets/private-libwebsockets.h
    src/engine/external/libwebsockets/getifaddrs.h
    src/engine/external/libwebsockets/extension-deflate-stream.h
    src/engine/external/openssl/e_os2.h
    src/engine/external/openssl/mdc2.h
    src/engine/external/openssl/tls1.h
    src/engine/external/openssl/err.h
    src/engine/external/openssl/idea.h
    src/engine/external/openssl/ssl.h
    src/engine/external/openssl/rand.h
    src/engine/external/openssl/whrlpool.h
    src/engine/external/openssl/dsa.h
    src/engine/external/openssl/txt_db.h
    src/engine/external/openssl/ecdsa.h
    src/engine/external/openssl/ui_compat.h
    src/engine/external/openssl/pem.h
    src/engine/external/openssl/modes.h
    src/engine/external/openssl/ec.h
    src/engine/external/openssl/symhacks.h
    src/engine/external/openssl/sha.h
    src/engine/external/openssl/evp.h
    src/engine/external/openssl/obj_mac.h
    src/engine/external/openssl/aes.h
    src/engine/external/openssl/safestack.h
    src/engine/external/openssl/opensslv.h
    src/engine/external/openssl/pkcs7.h
    src/engine/external/openssl/rc4.h
    src/engine/external/openssl/cms.h
    src/engine/external/openssl/x509_vfy.h
    src/engine/external/openssl/hmac.h
    src/engine/external/openssl/kssl.h
    src/engine/external/openssl/dtls1.h
    src/engine/external/openssl/seed.h
    src/engine/external/openssl/stack.h
    src/engine/external/openssl/pqueue.h
    src/engine/external/openssl/pem2.h
    src/engine/external/openssl/crypto.h
    src/engine/external/openssl/x509.h
    src/engine/external/openssl/ebcdic.h
    src/engine/external/openssl/buffer.h
    src/engine/external/openssl/x509v3.h
    src/engine/external/openssl/rc2.h
    src/engine/external/openssl/opensslconf.h
    src/engine/external/openssl/asn1.h
    src/engine/external/openssl/cmac.h
    src/engine/external/openssl/ssl23.h
    src/engine/external/openssl/ripemd.h
    src/engine/external/openssl/srtp.h
    src/engine/external/openssl/blowfish.h
    src/engine/external/openssl/srp.h
    src/engine/external/openssl/ssl2.h
    src/engine/external/openssl/krb5_asn.h
    src/engine/external/openssl/ts.h
    src/engine/external/openssl/ssl3.h
    src/engine/external/openssl/ecdh.h
    src/engine/external/openssl/conf_api.h
    src/engine/external/openssl/lhash.h
    src/engine/external/openssl/pkcs12.h
    src/engine/external/openssl/ui.h
    src/engine/external/openssl/dso.h
    src/engine/external/openssl/md5.h
    src/engine/external/openssl/ocsp.h
    src/engine/external/openssl/conf.h
    src/engine/external/openssl/objects.h
    src/engine/external/openssl/des_old.h
    src/engine/external/openssl/bio.h
    src/engine/external/openssl/cast.h
    src/engine/external/openssl/dh.h
    src/engine/external/openssl/rsa.h
    src/engine/external/openssl/md4.h
    src/engine/external/openssl/camellia.h
    src/engine/external/openssl/bn.h
    src/engine/external/openssl/ossl_typ.h
    src/engine/external/openssl/asn1_mac.h
    src/engine/external/openssl/comp.h
    src/engine/external/openssl/des.h
    src/engine/external/openssl/engine.h
    src/engine/external/openssl/asn1t.h
    src/engine/external/json-parser/json.c
    src/engine/external/json-parser/json.h
    src/engine/external/pnglite/pnglite.c
    src/engine/external/pnglite/pnglite.h
    src/engine/external/astar-jps/IndexPriorityQueue.h
    src/engine/external/astar-jps/AStar.h
    src/engine/external/astar-jps/AStar.cpp
    src/engine/external/astar-jps/IndexPriorityQueue.c
    src/engine/config.h
    src/engine/kernel.h
    src/engine/updater.h
    src/engine/server.h
    src/engine/textrender.h
    src/engine/curlwrapper.h
    src/engine/graphics.h
    src/engine/console.h
    src/engine/friends.h
    src/engine/input.h
    src/engine/client.h
    src/engine/sound.h
    src/engine/engine.h
    src/engine/fetcher.h
    src/engine/map.h
    src/engine/storage.h
    src/engine/keys.h
    src/game/localization.h
    src/game/localization.cpp
    src/game/client/animstate.cpp
    src/game/client/gameclient.cpp
    src/game/client/components/nameplates.cpp
    src/game/client/components/motd.h
    src/game/client/components/killmessages.cpp
    src/game/client/components/hud.cpp
    src/game/client/components/damageind.cpp
    src/game/client/components/luarender.h
    src/game/client/components/camera.cpp
    src/game/client/components/controls.h
    src/game/client/components/gametexture.h
    src/game/client/components/mapsounds.cpp
    src/game/client/components/damageind.h
    src/game/client/components/particles.h
    src/game/client/components/debughud.h
    src/game/client/components/players.cpp
    src/game/client/components/items.h
    src/game/client/components/astar.cpp
    src/game/client/components/voting.cpp
    src/game/client/components/countryflags.h
    src/game/client/components/statboard.cpp
    src/game/client/components/voting.h
    src/game/client/components/race_demo.h
    src/game/client/components/skindownload.cpp
    src/game/client/components/binds.h
    src/game/client/components/race_demo.cpp
    src/game/client/components/controls.cpp
    src/game/client/components/flow.cpp
    src/game/client/components/irc.h
    src/game/client/components/menus_browser.cpp
    src/game/client/components/nameplates.h
    src/game/client/components/mapimages.cpp
    src/game/client/components/effects.h
    src/game/client/components/spoofremote.h
    src/game/client/components/drawing.h
    src/game/client/components/background.h
    src/game/client/components/menus_manual/credits.h
    src/game/client/components/menus_manual/__finish.h
    src/game/client/components/menus_manual/about.h
    src/game/client/components/menus_manual/__defines_impl.h
    src/game/client/components/menus_manual/__defines_cht.h
    src/game/client/components/menus.h
    src/game/client/components/menus_texture.cpp
    src/game/client/components/irc.cpp
    src/game/client/components/menus_ingame.cpp
    src/game/client/components/maplayers.cpp
    src/game/client/components/broadcast.cpp
    src/game/client/components/translator.cpp
    src/game/client/components/spectator.cpp
    src/game/client/components/mapimages.h
    src/game/client/components/killmessages.h
    src/game/client/components/countryflags.cpp
    src/game/client/components/menus.cpp
    src/game/client/components/gametexture.cpp
    src/game/client/components/luarender.cpp
        src/game/client/components/fontmgr.h
        src/game/client/components/ghost.h
    src/game/client/components/console.cpp
    src/game/client/components/drawing.cpp
    src/game/client/components/debughud.cpp
    src/game/client/components/camera.h
    src/game/client/components/flow.h
    src/game/client/components/motd.cpp
    src/game/client/components/binds.cpp
    src/game/client/components/skins.h
    src/game/client/components/skindownload.h
    src/game/client/components/skins.cpp
    src/game/client/components/emoticon.cpp
    src/game/client/components/scoreboard.h
    src/game/client/components/ghost.cpp
    src/game/client/components/sounds.h
    src/game/client/components/hud.h
    src/game/client/components/statboard.h
    src/game/client/components/effects.cpp
    src/game/client/components/spectator.h
    src/game/client/components/mapsounds.h
    src/game/client/components/chat.h
    src/game/client/components/console.h
    src/game/client/components/broadcast.h
    src/game/client/components/menus_irc.cpp
    src/game/client/components/chat.cpp
    src/game/client/components/maplayers.h
    src/game/client/components/spoofremote.cpp
    src/game/client/components/identity.h
        src/game/client/components/menus_settings/settings_identity.cpp
    src/game/client/components/menus_settings/settings.cpp
    src/game/client/components/astar.h
    src/game/client/components/particles.cpp
    src/game/client/components/menus_manual.cpp
    src/game/client/components/emoticon.h
    src/game/client/components/menus_hotbar.cpp
    src/game/client/components/scoreboard.cpp
        src/game/client/components/fontmgr.cpp
    src/game/client/components/sounds.cpp
    src/game/client/components/menus_demo.cpp
    src/game/client/components/translator.h
    src/game/client/components/background.cpp
    src/game/client/components/items.cpp
    src/game/client/components/identity.cpp
    src/game/client/components/players.h
    src/game/client/gameclient.h
    src/game/client/ui.cpp
    src/game/client/render.cpp
    src/game/client/lineinput.h
    src/game/client/render.h
    src/game/client/component.h
    src/game/client/ui.h
    src/game/client/animstate.h
    src/game/client/render_map.cpp
    src/game/client/lineinput.cpp
    src/game/voting.h
    src/game/ddracecommands.h
    src/game/tuning.h
    src/game/server/teams.cpp
    src/game/server/save.cpp
    src/game/server/ddracechat.cpp
    src/game/server/entity.cpp
    src/game/server/eventhandler.cpp
    src/game/server/score.h
    src/game/server/gamecontroller.h
    src/game/server/save.h
    src/game/server/gamecontroller.cpp
    src/game/server/entities/door.cpp
    src/game/server/entities/flag.h
    src/game/server/entities/character.h
    src/game/server/entities/plasma.cpp
    src/game/server/entities/projectile.h
    src/game/server/entities/character.cpp
    src/game/server/entities/flag.cpp
    src/game/server/entities/dragger.h
    src/game/server/entities/plasma.h
    src/game/server/entities/laser.h
    src/game/server/entities/laser.cpp
    src/game/server/entities/pickup.h
    src/game/server/entities/projectile.cpp
    src/game/server/entities/light.h
    src/game/server/entities/door.h
    src/game/server/entities/dragger.cpp
    src/game/server/entities/gun.cpp
    src/game/server/entities/gun.h
    src/game/server/entities/pickup.cpp
    src/game/server/entities/light.cpp
    src/game/server/gamecontext.h
    src/game/server/teams.h
    src/game/server/gameworld.h
    src/game/server/player.cpp
    src/game/server/gamemodes/DDRace.h
    src/game/server/gamemodes/gamemode.h
    src/game/server/gamemodes/DDRace.cpp
    src/game/server/player.h
    src/game/server/score/sql_score.cpp
    src/game/server/score/file_score.h
    src/game/server/score/sql_score.h
    src/game/server/score/file_score.cpp
    src/game/server/gameworld.cpp
    src/game/server/eventhandler.h
    src/game/server/gamecontext.cpp
    src/game/server/ddracecommands.cpp
    src/game/server/entity.h
    src/game/server/ddracechat.h
    src/game/gamecore.cpp
    src/game/collision.cpp
    src/game/teamscore.cpp
    src/game/variables.h
    src/game/version.h
    src/game/layers.h
    src/game/gamecore.h
    src/game/collision.h
    src/game/editor/auto_map.h
    src/game/editor/layer_quads.cpp
    src/game/editor/editor.h
    src/game/editor/io.cpp
    src/game/editor/editor.cpp
    src/game/editor/auto_map.cpp
    src/game/editor/layer_sounds.cpp
    src/game/editor/layer_game.cpp
    src/game/editor/popups.cpp
    src/game/editor/layer_tiles.cpp
    src/game/teamscore.h
    src/game/mapitems.h
    src/game/mapitems.cpp
    src/game/layers.cpp
    src/mastersrv/mastersrv.cpp
    src/mastersrv/mastersrv.h
    src/osx/notification.h
    src/versionsrv/mapversions.h
    src/versionsrv/versionsrv.cpp
    src/versionsrv/versionsrv.h
    src/game/client/components/menus_settings/settings_general.cpp
    src/game/client/components/menus_settings/settings_player.cpp
    src/game/client/components/menus_settings/settings_tee.cpp
    src/game/client/components/menus_settings/settings_lua.cpp
    src/game/client/components/menus_settings/settings_controls.cpp
    src/game/client/components/menus_settings/settings_graphics.cpp
    src/game/client/components/menus_settings/settings_sound.cpp
    src/game/client/components/menus_settings/settings_appearance.cpp
    src/game/client/components/menus_settings/settings_hud.cpp
    src/base/system++/io.h
    src/base/system++/threading.h
    src/engine/client/data_updater.h
    src/engine/client/data_updater.cpp
)
add_executable(AllTheHaxx ${SOURCE_FILES})
